# jsource

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  jbuild.scm  license.txt  overview.txt  version.txt
SLEEF/: .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  Configure.cmake  Jenkinsfile  README.md  appveyor.yml  sleef-config.h.in
SLEEF/doc/: build-with-cmake.md  sleeflogo.pptx
SLEEF/doc/html/: CMakeLists.txt  CNAME  aarch32.xhtml  aarch64.xhtml  additional.xhtml  benchmark.xhtml  compile.xhtml  dft.xhtml  hellox86.c  index.xhtml  misc.xhtml  ppc64.xhtml  purec.xhtml  sleef.css  texlike.css  tutorial.c  vectest.c  x86.xhtml
SLEEF/include/: sleefdft.h
SLEEF/src/: CMakeLists.txt
SLEEF/src/arch/: helperavx.h  helperavx2.h  helperavx2_128.h  helperavx512f.h  helperneon32.h  helperpower_128.h  helperpurec.h  helperpurec_scalar.h  helpersse2.h  helpersve.h  helpervecext.h
SLEEF/src/common/: CMakeLists.txt  arraymap.c  common.c  f128util.h  misc.h
SLEEF/src/dft/: CMakeLists.txt  dft.c  dftcommon.c  dftcommon.h  mkdispatch.c  mkunroll.c  vectortype.h
SLEEF/src/dft-tester/: CMakeLists.txt  bench1d.c  fftwtest1d.c  fftwtest2d.c  measuredft.c  naivetest.c  roundtriptest1d.c  roundtriptest2d.c  tutorial.c
SLEEF/src/gencoef/: Makefile  gencoef.c  simplexfr.c
SLEEF/src/libm/: CMakeLists.txt  df.h  dispavx.c.org  dispsse.c.org  funcproto.h  mkalias.c  mkdisp.c  mkmasked_gnuabi.c  mkrename.c  mkrename_gnuabi.c  rempitab.c  sleefdp.c  sleefld.c  sleeflibm_footer.h.org  sleeflibm_header.h.org  sleefqp.c  sleefsimddp.c  sleefsimdsp.c  sleefsp.c
SLEEF/src/libm-benchmarks/: Makefile  ProcessData.java  benchsleef.c  benchsleef128.c  benchsleef256.c  benchsleef512.c  benchsvml.c  benchsvml128.c  benchsvml256.c  benchsvml512.c  measure.sh
SLEEF/src/libm-tester/: CMakeLists.txt  gnuabi_compatibility.c  hash_cinz.txt  hash_finz.txt  iut.c  iutsimd.c  iutsimdmain.c  tester.c  tester2dp.c  tester2ld.c  tester2qp.c  tester2simddp.c  tester2simdsp.c  tester2sp.c  tester3.c  tester3main.c  testerutil.c  testerutil.h
SLEEF/src/quad/: CMakeLists.txt  qfuncproto.h  qmkrename.c  rempitabqp.c  sleefquad_footer.h.org  sleefquad_header.h.org  sleefsimdqp.c
SLEEF/src/quad-tester/: CMakeLists.txt  qiutsimd.c  qiutsimdmain.c  qtester.c  qtesterutil.c  qtesterutil.h  tester2simdqp.c
SLEEF/travis/: before_install.aarch64-gcc.sh  before_install.arm64-gcc.sh  before_install.armhf-gcc.sh  before_install.common.sh  before_install.osx-clang.sh  before_install.osx-gcc.sh  before_install.x86_64-clang.sh  before_script.aarch64-gcc.sh  before_script.arm64-clang.sh  before_script.arm64-gcc.sh  before_script.armhf-gcc.sh  before_script.common.sh  before_script.osx-clang.sh  before_script.osx-gcc.sh  before_script.x86_64-clang.sh  before_script.x86_64-gcc.sh  ppc64el-cc  script.aarch64-gcc.sh  script.common.sh  script.ppc64el-clang.sh  script.x86_64-clang.sh  script.x86_64-gcc.sh  setupdocker.sh  toolchain-aarch64.cmake  toolchain-armhf.cmake  toolchain-ppc64el.cmake
base64/: CMakeLists.txt
base64/include/: libbase64.h
base64/lib/: codec_choose.c  config.h  env.h  lib.c  lib_openmp.c
dllsrc/: CMakeLists.txt  jcedll.def  jdll.c  jdll.def  jdll.h  jdll.rc  jdll.tlb  jdll2.def  jdll3.def  jdll_rebuilt_from_old_source.tlb  jdllcom.h  jdllcomx.cpp  jdlltype.h  jexe.h
jsrc/: Android-static.mk  Android.mk  CMakeLists.txt  Jamalgam-nopie.mk  Jamalgam.mk  Jconsole-nopie.mk  Jconsole.mk  Jnative.mk  Tsdll.mk  VA2ss.C  a.c  a.h  ab.c  aes-arm.c  aes-arm_table.h  aes-c.c  aes-c.h  aes-ni.c  aes-sse2.c  aes.h  aes128.c  aes192.c  aes256.c  af.c  ai.c  am.c  am1.c  amn.c  andjnative.c  ao.c  ap.c  ar.c  ar.h  as.c  au.c  avx2intrin-emu.h  avxintrin-emu.h  avxintrin-neon.h  blis.h  c.c  (+215 more)
jsrc/blis/: gemm_c-ref.c  gemm_int-aarch64.c  gemm_int-avx.c  gemm_int-fma.c  gemm_int-sse2.c  gemm_vec-ref.c
jsrc/openssl/sha/: CMakeLists.txt  README.txt  keccak1600.c  md32_common.h  md4.h  md4_dgst.c  md4_locl.h  md4_one.c  md5.h  md5_dgst.c  md5_locl.h  md5_one.c  openssl-util.c  openssl.h  sha.h  sha1_one.c  sha256.c  sha3.c  sha3.h  sha512.c  sha_locl.h
jsrc/sha/: md4.c  md4.h  md5.c  md5.h  sha1.c  sha1.h  sha2.c  sha2.h  sha3.c  sha3.h
jsrc/utf/: utf16le_to_utf8_avx512.S  utf16le_to_utf8_avx512i.c  utf8_to_utf16le_avx512.S  utf8_to_utf16le_avx512i.c
sleef/: CMakeLists.txt
sleef/include/: sleef.h  sleefquad.h
sleef/include/aarch64/: sleef.h  sleefinline_advsimd.h  sleefinline_cuda.h  sleefinline_purecfma_scalar.h  sleefquad.h  sleefquadinline_advsimd.h  sleefquadinline_cuda.h  sleefquadinline_purec_scalar.h  sleefquadinline_purecfma_scalar.h
sleef/include/x86_64/: sleef.h  sleefinline_avx2.h  sleefinline_avx2128.h  sleefinline_avx512f.h  sleefinline_cuda.h  sleefinline_purecfma_scalar.h  sleefinline_sse2.h  sleefquad.h  sleefquadinline_avx2.h  sleefquadinline_avx2128.h  sleefquadinline_avx512f.h  sleefquadinline_cuda.h  sleefquadinline_purec_scalar.h  sleefquadinline_purecfma_scalar.h  sleefquadinline_sse2.h
sleef/src/arch/: alias_advsimd.h  alias_avx512f.h  avxintrin-emu.h  helperadvsimd.h  helperavx.h  helperavx2.h  helperavx2_128.h  helperavx512f.h  helperneon32.h  helperpower_128.h  helperpurec.h  helperpurec_scalar.h  helpers390x_128.h  helpersse2.h  helpersve.h  helpervecext.h  qrenameadvsimd.h  qrenameavx2.h  qrenameavx2128.h  qrenameavx512f.h  qrenamecuda.h  qrenamedspscalar.h  qrenamedspx2.h  qrenamepurec_scalar.h  qrenamepurecfma_scalar.h  qrenamesse2.h  qrenamesve.h  renameadvsimdnofma.h  renameavx2.h  renameavx2128.h  renameavx512f.h  renamecuda.h  renamedsp128.h  renamedsp256.h  renamedspscalar.h  renamefma4.h  renamepurecfma_scalar.h  (+4 more)
test/: CMakeLists.txt  eformat.ijs  g0.ijs  g000.ijs  g000a.ijs  g000i.ijs  g000p.ijs  g000s.ijs  g001.ijs  g010.ijs  g010a.ijs  g010i.ijs  g010p.ijs  g010s.ijs  g011.ijs  g011a.ijs  g011i.ijs  g011p.ijs  g011s.ijs  g012.ijs  g012a.ijs  g012i.ijs  g012p.ijs  g012s.ijs  g020.ijs  g020a.ijs  g020i.ijs  g020p.ijs  g020s.ijs  g021.ijs  g021a.ijs  g021i.ijs  g021p.ijs  g021s.ijs  g022.ijs  g022a.ijs  g022i.ijs  g022p.ijs  g022s.ijs  g030.ijs  (+423 more)
(+519 files in other folders)
