add_compile_definitions(C_AVX=1 C_AVX2=1 EMU_AVX=1)
if(WIN32)
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
endif()

add_library(j SHARED)
set_target_properties(j PROPERTIES CXX_VISIBILITY_PRESET hidden)
set_source_files_properties(aes-ni.c PROPERTIES COMPILE_FLAGS -maes)
target_sources(j PRIVATE
    a.h
    aes-arm_table.h
    aes-c.h
    ar.h
    avx2intrin-emu.h
    avxintrin-emu.h
    avxintrin-neon.h
    cip_t.h
    cipfloatmm_t.h
    com_jsoftware_j_JInterface.h
    cpuinfo.h
    cr_t.h
    crc32c.h
    crc32ctables.h
    d.h
    dtoa.h
    fnmatch.h
    gemm.h
    j.h
    ja.h
    jc.h
    je.h
    jerr.h
    jfex.h
    js.h
    jt.h
    jtype.h
    jversion-x.h
    jversion.h
    jx_utils_jnative.h
    linenoise.h
    m.h
    p.h
    result.h
    s.h
    sse2neon.h
    sse2neon2.h
    va.h
    vasm.h
    vcomp.h
    vdx.h
    ve.h
    vg.h
    vgmerge.h
    vgmergemincomp.h
    vgsort.h
    vgsortq.h
    vq.h
    vx.h
    vz.h
    w.h
    x.h
    xc.h
    a.c
    ab.c
    aes-c.c
    aes-ni.c
    aes-sse2.c
    af.c
    ai.c
    am.c
    am1.c
    amn.c
    ao.c
    ap.c
    ar.c
    as.c
    au.c
    c.c
    ca.c
    cc.c
    cd.c
    cf.c
    cg.c
    ch.c
    cip.c
    cl.c
    cp.c
    cpdtsp.c
    cpuinfo.c
    cr.c
    crs.c
    ct.c
    cu.c
    cv.c
    cx.c
    d.c
    dc.c
    dss.c
    dstop.c
    dsusp.c
    dtoa.c
    f.c
    f2.c
    fbu.c
    gemm.c
    i.c
    io.c
    j.c
    jdlllic.c
    k.c
    m.c
    mbx.c
    p.c
    pv.c
    px.c
    r.c
    rl.c
    rt.c
    s.c
    sc.c
    sl.c
    sn.c
    t.c
    u.c
    v.c
    v0.c
    v1.c
    v2.c
    va1.c
    va1ss.c
    va2.c
    va2s.c
    va2ss.c
    vamultsp.c
    vb.c
    vbang.c
    vbit.c
    vcant.c
    vcat.c
    vcatsp.c
    vchar.c
    vcomp.c
    vcompsc.c
    vd.c
    vdx.c
    ve.c
    vf.c
    vfft.c
    vfrom.c
    vfromsp.c
    vg.c
    vgauss.c
    vgcomp.c
    vgranking.c
    vgsort.c
    vgsp.c
    vi.c
    viavx.c
    viix.c
    visp.c
    vm.c
    vo.c
    vp.c
    vq.c
    vrand.c
    vrep.c
    vs.c
    vsb.c
    vt.c
    vu.c
    vx.c
    vz.c
    w.c
    wc.c
    wn.c
    ws.c
    x.c
    x15.c
    xa.c
    xaes.c
    xb.c
    xc.c
    xcrc.c
    xd.c
    xf.c
    xfmt.c
    xh.c
    xi.c
    xl.c
    xo.c
    xs.c
    xsha.c
    xt.c
    xu.c
    crc32c.c
)

add_library(j-blis OBJECT)
target_sources(j-blis PRIVATE
    blis.h
    blis/gemm_c-ref.c
    blis/gemm_int-aarch64.c
    blis/gemm_int-avx.c
    blis/gemm_int-fma.c
    blis/gemm_int-sse2.c
    blis/gemm_vec-ref.c
)

add_library(j-openssl-sha OBJECT)
target_compile_definitions(j-openssl-sha PRIVATE NO_SHA_ASM)
target_sources(j-openssl-sha PRIVATE
    openssl/sha/md32_common.h
    openssl/sha/md4.h
    openssl/sha/md4_locl.h
    openssl/sha/md5.h
    openssl/sha/md5_locl.h
    openssl/sha/openssl.h
    openssl/sha/sha.h
    openssl/sha/sha3.h
    openssl/sha/sha_locl.h
    openssl/sha/keccak1600.c
    openssl/sha/md4_dgst.c
    openssl/sha/md4_one.c
    openssl/sha/md5_dgst.c
    openssl/sha/md5_one.c
    openssl/sha/openssl-util.c
    openssl/sha/sha1_one.c
    openssl/sha/sha256.c
    openssl/sha/sha3.c
    openssl/sha/sha512.c
)
