if(BUILD_TESTING)
    add_library(tsdll SHARED)
    target_link_libraries(tsdll PRIVATE ${STANDARD_MATH_LIBRARY})
    target_sources(tsdll PRIVATE
        ../jsrc/tsdll.c
        ../makevs/tsdll/tsdll.def
    )
endif()

set(test_cases
    g0
    g000
    g000a
    g000i
    g000p
    g000s
    g001
    g010
    g010a
    g010i
    g010p
    g010s
    g011
    g011a
    g011i
    g011p
    g011s
    g012
    g012a
    g012i
    g012p
    g012s
    g020
    g020a
    g020i
    g020p
    g020s
    g021
    g021a
    g021i
    g021p
    g021s
    g022
    g022a
    g022i
    g022p
    g022s
    g030
    g030a
    g031
    g032
    g0a
    g0x
    g100
    g100a
    g100i
    g100p
    g100s
    g101
    g101a
    g101i
    g101p
    g101s
    g102
    g102a
    g102i
    g102p
    g102s
    g110
    g110a
    g110i
    g110p
    g110s
    g111
    g111a
    g111i
    g111p
    g111s
    g112
    g112a
    g112i
    g112p
    g112s
    g120
    g120a
    g120i
    g120p
    g120s
    g121
    g122
    g122a
    g128x
    g128x3
    g128x5
    g128x6
    g128x7
    g130
    g130a
    g130i
    g130p
    g131
    g132
    g13x
    g15x
  # g18x
    g1x
    g1x0
    g1x1
    g1x11
    g1x12
    g1x2
    g1x20
    g1x3
    g1x30
    g1x4
    g1x43
    g1x5
    g1x55
    g1x7
    g200
    g200a
    g200i
    g200m
    g200p
    g201
    g202
    g202b
    g210
    g210a
    g211
    g212
    g220
    g220t
    g221
    g222
    g222a
    g222i
    g222p
    g222s
    g230
    g230a
    g230i
    g230p
    g230s
    g231
    g232
    g2x
    g300
    g300b
    g300t
    g301
    g310
    g310a
    g310names
    g310r
    g310t
    g311
    g312
    g320
    g320ip
    g320ipt
    g321
    g321t
    g322
    g330
    g330f
    g330t
    g331
    g331bx
    g331col
    g331ins
    g331ps
    g331sp
    g332
    g332s
    g3x
    g3x4
    g3x5
    g3x6
    g400
    g400e
    g401
    g402
    g410
    g410a
    g410i
    g410p
    g410s
    g411
    g412
  # g420
    g420ce
    g420fg
    g420r2
    g420stch
    g420t
    g421
    g421c
    g421d
    g421e
    g421i
    g421p
    g421t
    g422
    g422os
    g422rk
    g422sort
    g422sort1
    g422tao
    g430
    g430a2
    g430avg
    g430b
    g430d
    g430fin
    g430inv
    g431
    g431a
    g432
    g4x
    g4x5
    g500
    g502
    g510
    g520
    g520b
    g520p
    g521
    g522
    g530
    g530t
    g531
    g532
    g5x
    g5x0
    g5x1
    g5x2
    g5x30
    g5x4
    g5x5
    g5x6
    g5x7
    g600
    g600ip
    g601
    g602
    g610
    g612
    g620
    g620a
    g621
    g622
    g630
    g631
    g631c
    g632
    g640
    g640k
    g640r
    g641
    g6x
    g6x0
    g6x14
    g7x
    g7x5
    g7x6
    g8x
    g9x
    g9x40
    ga
    gassert
    gb
    gbpar
    gc
    gchar
    gcompsc
    gct
    gctrl
    gd
    gddot
    gdll
    gdll_df
    ge
    gebar
    gesc
    gf
    gfor
    gft
    ggoto
    gh
    gi
    gi0
    gibs
    gibst
    gicap
    gicap2
    gico
    giconv
    gif
    gimaxmin
    gintdiv
    gintg
    gintovfl
    giph
    gipht
    giscode
    git
    gix
    gj
    glco
    gldot
    glocale
    gmean
    gmemo
    gmmf
    gmmf1s
    gmmf1u
    gmmf1w
    gmnom
    gn
    gnan
    gnum
    gnvv
    go
    goi
    goox
    gop
    gos
    gparse
    gpco
    gpco2
    gpcoinv
    gpdd
    gpi
    gpick
    gpoly
    gq
    gq101
    gq132
    gq201
    gqco
    gqnonrat
    gr
    gr1
    grefcount
    gs
    gsco
    gsco1
    gsco1u
    gsco1w
    gsco2
    gsco2u
    gsco2w
    gscou
    gsdot
    gselect
    gsp
    gsp0
    gsp000
    gsp1
    gsp100
    gsp101
    gsp102
    gsp110
    gsp111
    gsp112
    gsp120
    gsp122
    gsp130
    gsp2
    gsp221
    gsp222
    gsp231
    gsp320
    gsp321
    gsp322
    gsp331
    gsp400
    gsp410
    gsp412
    gsp420
    gsp421
    gsp422
    gsp431
    gsp432
    gsp520
    gsp520sd
    gsp520ss
    gsp521
    gsp530i
    gsp530l
    gsp530n
    gsp531
    gsp5x5
    gsp6
    gsp600
    gsp600a
    gspi
    gspj
    gspo
    gspr
    gspx
    gss
    gstack
    gt
    gthrow
    gtrain
    gtry
    gu
    gu0
    gunderai
    gwhile
    gx
    gx132
    gxco
    gxco1
    gxco2
    gxinf
)

foreach(test_name IN LISTS test_cases)
    file(GENERATE
        OUTPUT "$<${is_multi_config}:$<CONFIG>/>${test_name}.ijs"
        CONTENT "0!:0 <'${CMAKE_CURRENT_SOURCE_DIR}/tsu.ijs'
LIBTSDLL=:'$<TARGET_FILE:tsdll> '
exit -.&(0!:3) <testpath,'${test_name}.ijs'"
        CONDITION $<BOOL:${BUILD_TESTING}>
    )
    add_test(
        NAME ${test_name}
        COMMAND jconsole "$<${is_multi_config}:$<CONFIG>/>${test_name}.ijs"
    )
endforeach()
